--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tomdevweb.github.io/kasa-react/",
+  "homepage": "http://localhost:3000/accueil",
   "name": "kasa-react",
   "version": "0.1.0",
   "private": true,
